--- a/index.html
+++ b/index.html
@@ -11,20 +11,28 @@
 
   <style>
     :root {
-      /* Теплі нейтральні кольори */
-      --bg-gradient-start: #c79a7b;
-      --bg-gradient-end: #5c2c28;
-      --card-bg: rgba(60, 21, 21, 0.88);
-      --card-bg-soft: rgba(60, 21, 21, 0.75);
-      --accent: #f5d9b4;
-      --accent-soft: #e8ccb0;
-      --text-main: #fdf7f2;
-      --text-muted: #f1e1d5;
-      --link: #f5d9b4;
-      --chip-bg: rgba(245, 217, 180, 0.12);
-      --chip-border: rgba(245, 217, 180, 0.4);
-      --shadow-soft: 0 18px 45px rgba(0, 0, 0, 0.45);
-      --radius-lg: 26px;
+      /* Бірюзово-Google палітра */
+      --bg-gradient-start: #009fad;
+      --bg-gradient-mid: #70c4c3;
+      --bg-gradient-end: #e8ffff;
+
+      --card-bg: rgba(255, 255, 255, 0.88);
+      --card-soft: rgba(255, 255, 255, 0.96);
+
+      --accent: #006f7a;
+      --accent-soft: #009fad;
+
+      --text-main: #033b43;
+      --text-muted: #275b63;
+
+      --link: #006f7a;
+
+      --chip-bg: rgba(0, 159, 173, 0.06);
+      --chip-border: rgba(0, 159, 173, 0.28);
+
+      --shadow-soft: 0 18px 40px rgba(0, 0, 0, 0.12);
+
+      --radius-lg: 24px;
       --radius-xl: 40px;
     }
 
@@ -38,7 +46,10 @@
       min-height: 100vh;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         sans-serif;
-      background: radial-gradient(circle at top, var(--bg-gradient-start), var(--bg-gradient-end));
+      background: radial-gradient(circle at top left,
+          var(--bg-gradient-start) 0%,
+          var(--bg-gradient-mid) 45%,
+          var(--bg-gradient-end) 100%);
       color: var(--text-main);
       display: flex;
       justify-content: center;
@@ -50,43 +61,45 @@
       padding: 24px 16px 40px;
     }
 
-    /* Верхня навігація */
+    /* TOP NAV */
+
     .top-nav {
       display: flex;
       justify-content: flex-end;
       gap: 12px;
-      margin-bottom: 12px;
+      margin-bottom: 14px;
       font-size: 0.9rem;
     }
 
     .top-nav a {
       text-decoration: none;
-      color: var(--text-muted);
+      color: var(--text-main);
       padding: 6px 12px;
       border-radius: 999px;
       border: 1px solid transparent;
+      background: rgba(255, 255, 255, 0.25);
+      backdrop-filter: blur(10px);
     }
 
     .top-nav a:hover {
-      border-color: var(--accent-soft);
-      background: rgba(0, 0, 0, 0.12);
+      border-color: rgba(0, 111, 122, 0.35);
+      background: rgba(255, 255, 255, 0.6);
     }
 
-    /* Hero */
+    /* HERO */
+
     .hero {
-      background: linear-gradient(
-        135deg,
-        rgba(255, 255, 255, 0.03),
-        rgba(0, 0, 0, 0.25)
-      );
+      background: radial-gradient(circle at top,
+          rgba(255, 255, 255, 0.92),
+          rgba(255, 255, 255, 0.82));
       border-radius: var(--radius-xl);
-      padding: 32px 20px 28px;
+      padding: 32px 20px 26px;
       box-shadow: var(--shadow-soft);
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
-      border: 1px solid rgba(255, 255, 255, 0.07);
+      border: 1px solid rgba(255, 255, 255, 0.9);
     }
 
     .hero-photo-wrapper {
@@ -94,7 +107,13 @@
       height: 160px;
       border-radius: 50%;
       padding: 4px;
-      background: radial-gradient(circle at 30% 0, #f5d9b4, #5c2c28);
+      background: conic-gradient(
+        from 210deg,
+        #e8ffff,
+        #70c4c3,
+        #009fad,
+        #e8ffff
+      );
       display: flex;
       align-items: center;
       justify-content: center;
@@ -107,9 +126,10 @@
       border-radius: 50%;
       background-size: cover;
       background-position: center;
-      background-color: #b88a6a; /* резерв, якщо немає фото */
-      /* СЮДИ ЗАМІНИ URL НА СВОЄ ФОТО */
-      background-image: url("https://via.placeholder.com/320x320.png?text=Oksana");
+      background-color: #c0e7ea; /* запасний фон */
+
+      /* ⚠️ СЮДИ ВСТАВ СВІЙ URL ФОТО З GITHUB */
+      background-image: url("https://via.placeholder.com/400x400.png?text=Oksana");
     }
 
     .hero-name {
@@ -120,19 +140,20 @@
     }
 
     .hero-role {
-      font-size: 0.98rem;
-      font-weight: 500;
+      font-size: 0.96rem;
+      font-weight: 600;
       color: var(--accent);
-      letter-spacing: 0.06em;
+      letter-spacing: 0.08em;
       text-transform: uppercase;
-      margin-bottom: 16px;
+      margin-bottom: 14px;
     }
 
     .hero-subtitle {
-      max-width: 620px;
+      max-width: 640px;
       font-size: 0.98rem;
       color: var(--text-muted);
       margin-bottom: 18px;
+      line-height: 1.5;
     }
 
     .hero-tags {
@@ -149,7 +170,7 @@
       border: 1px solid var(--chip-border);
       background: var(--chip-bg);
       font-size: 0.78rem;
-      color: var(--accent-soft);
+      color: var(--accent);
       white-space: nowrap;
     }
 
@@ -164,28 +185,30 @@
     .hero-links a {
       text-decoration: none;
       font-size: 0.9rem;
-      padding: 7px 14px;
+      padding: 8px 16px;
       border-radius: 999px;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      color: var(--text-main);
-      background: rgba(0, 0, 0, 0.25);
+      border: 1px solid rgba(0, 111, 122, 0.45);
+      color: var(--accent);
+      background: rgba(255, 255, 255, 0.85);
     }
 
     .hero-links a.primary {
-      border-color: var(--accent);
-      background: rgba(245, 217, 180, 0.08);
-      color: var(--accent);
+      background: var(--accent-soft);
+      color: #ffffff;
+      border-color: var(--accent-soft);
     }
 
     .hero-links a:hover {
-      background: rgba(0, 0, 0, 0.4);
+      background: rgba(255, 255, 255, 1);
     }
 
     .hero-links a.primary:hover {
-      background: rgba(245, 217, 180, 0.15);
+      background: #007b87;
+      border-color: #007b87;
     }
 
-    /* Layout нижче */
+    /* CONTENT SECTIONS */
+
     .sections {
       margin-top: 28px;
       display: grid;
@@ -197,33 +220,34 @@
       border-radius: var(--radius-lg);
       padding: 20px 18px 18px;
       box-shadow: var(--shadow-soft);
-      border: 1px solid rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.9);
     }
 
     .card h2 {
-      font-size: 1.05rem;
+      font-size: 1rem;
       margin-bottom: 10px;
       text-transform: uppercase;
-      letter-spacing: 0.12em;
+      letter-spacing: 0.13em;
       color: var(--accent);
     }
 
     .card p {
       font-size: 0.92rem;
       color: var(--text-muted);
-      line-height: 1.55;
+      line-height: 1.6;
       margin-bottom: 8px;
     }
 
     .card ul {
       list-style: none;
       margin-top: 4px;
+      padding-left: 0;
     }
 
     .card li {
       font-size: 0.9rem;
       color: var(--text-main);
-      margin-bottom: 4px;
+      margin-bottom: 5px;
       padding-left: 14px;
       position: relative;
     }
@@ -240,15 +264,16 @@
       display: flex;
       flex-wrap: wrap;
       gap: 6px;
-      margin-top: 6px;
+      margin-top: 8px;
     }
 
     .pill {
       font-size: 0.8rem;
       padding: 4px 9px;
       border-radius: 999px;
-      background: rgba(255, 255, 255, 0.05);
-      color: var(--text-muted);
+      background: rgba(0, 159, 173, 0.06);
+      color: var(--accent);
+      border: 1px solid rgba(0, 159, 173, 0.25);
     }
 
     .projects-list a {
@@ -256,11 +281,11 @@
       text-decoration: none;
       color: var(--text-main);
       font-size: 0.9rem;
-      padding: 8px 10px;
-      margin-bottom: 4px;
-      border-radius: 14px;
-      background: var(--card-bg-soft);
-      border: 1px solid rgba(255, 255, 255, 0.06);
+      padding: 9px 11px;
+      margin-bottom: 6px;
+      border-radius: 16px;
+      background: var(--card-soft);
+      border: 1px solid rgba(0, 0, 0, 0.03);
     }
 
     .projects-list a span {
@@ -271,7 +296,8 @@
     }
 
     .projects-list a:hover {
-      background: rgba(0, 0, 0, 0.4);
+      border-color: rgba(0, 159, 173, 0.35);
+      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.08);
     }
 
     .contacts p {
@@ -290,11 +316,10 @@
     }
 
     footer {
-      margin-top: 24px;
-      font-size: 0.78rem;
-      color: var(--text-muted);
+      margin-top: 26px;
+      font-size: 0.8rem;
+      color: rgba(3, 59, 67, 0.8);
       text-align: center;
-      opacity: 0.85;
     }
 
     @media (min-width: 720px) {
@@ -311,7 +336,7 @@
 </head>
 <body>
   <div class="page">
-    <!-- Навігація -->
+    <!-- NAV -->
     <nav class="top-nav">
       <a href="#about">Про мене</a>
       <a href="#expertise">Експертиза</a>
@@ -331,8 +356,8 @@
       </div>
 
       <p class="hero-subtitle">
-        Допомагаю бізнесу переходити від ручної рутини до розумних автоматизованих
-        рішень на базі Google AI, Google Workspace, API та хмарної інфраструктури.
+        Допомагаю бізнесу переходити від ручної рутини до розумних автоматизованих рішень
+        на базі Google AI, Google Workspace, API та хмарної інфраструктури.
       </p>
 
       <div class="hero-tags">
@@ -344,28 +369,32 @@
       </div>
 
       <div class="hero-links">
-        <a class="primary" href="https://www.linkedin.com/in/oksana-%D1%82ymchenko-714879a3" target="_blank" rel="noreferrer">
+        <a
+          class="primary"
+          href="https://www.linkedin.com/in/oksana-%D1%82ymchenko-714879a3"
+          target="_blank"
+          rel="noreferrer"
+        >
           LinkedIn
         </a>
         <a href="mailto:belinskaya.oksana@gmail.com">Написати email</a>
       </div>
     </section>
 
-    <!-- Нижні секції -->
+    <!-- SECTIONS -->
     <div class="sections">
-
       <section class="card" id="expertise">
         <h2>Експертиза</h2>
         <p>
-          Працюю на стику AI, фінансів, HR та хмарної автоматизації. Створюю системи,
+          Працюю на перетині AI, фінансів, HR та хмарної автоматизації. Створюю системи,
           які скорочують ручну роботу, зменшують кількість помилок і дають прозору
-          картину даних.
+          картину даних у бізнесі.
         </p>
         <ul>
           <li>AI-рішення на базі Gemini / Vertex AI / Document AI</li>
           <li>Автоматизація бізнес-процесів у Google Workspace</li>
           <li>Проєктування API-орієнтованих інтеграцій</li>
-          <li>Оптимізація процесів у фінансах та HR</li>
+          <li>Оптимізація фінансових та HR-процесів</li>
         </ul>
         <div class="pill-row">
           <span class="pill">AI Automation</span>
@@ -391,14 +420,14 @@
       <section class="card span-2" id="projects">
         <h2>AI та автоматизаційні проєкти</h2>
         <p>
-          Ключові приклади рішень, які я проєктую та впроваджую. Для кожного
-          можна зробити окремий репозиторій або сторінку з технічними деталями.
+          Ключові приклади рішень, які я проєктую та впроваджую. Для кожного можна
+          зробити окремий репозиторій або сторінку з технічними деталями.
         </p>
 
         <div class="projects-list">
           <a href="projects/inventory-bot.md">
             Telegram Inventory Bot — Cloud Run + Sheets
-            <span>AI-складський облік, інтеграція з Google Sheets та Telegram.</span>
+            <span>AI-складський облік з інтеграцією Google Sheets та Telegram.</span>
           </a>
           <a href="projects/ocr-validation.md">
             OCR Data Validation System — Document AI
@@ -406,7 +435,7 @@
           </a>
           <a href="projects/ai-agents.md">
             HR & Finance AI Agents — Gemini API
-            <span>Генерація документів, перевірка записів, робочі сценарії.</span>
+            <span>Генерація документів, перевірка записів, робочі AI-сценарії.</span>
           </a>
           <a href="projects/automation-workflows.md">
             Automation Workflows — Make / n8n
@@ -434,15 +463,22 @@
       <section class="card contacts" id="contacts">
         <h2>Контакти</h2>
         <p>Email: <a href="mailto:belinskaya.oksana@gmail.com">belinskaya.oksana@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/oksana-%D1%82ymchenko-714879a3" target="_blank" rel="noreferrer">
-          профіль
-        </a></p>
+        <p>
+          LinkedIn:
+          <a
+            href="https://www.linkedin.com/in/oksana-%D1%82ymchenko-714879a3"
+            target="_blank"
+            rel="noreferrer"
+          >
+            профіль
+          </a>
+        </p>
         <p>Місто: Київ, Україна</p>
       </section>
     </div>
 
     <footer>
-      Відкрита до співпраці: проєкти, консалтинг, remote-формат.  
+      Відкрита до співпраці: проєкти, консалтинг, remote-формат ·
       AI · Google Workspace · Cloud · Automation.
     </footer>
   </div>
