--- a/index.html
+++ b/index.html
@@ -11,29 +11,27 @@
 
   <style>
     :root {
-      /* Бірюзово-Google палітра */
-      --bg-gradient-start: #009fad;
-      --bg-gradient-mid: #70c4c3;
-      --bg-gradient-end: #e8ffff;
+      /* Тепла нейтральна преміум-палітра */
+      --bg-gradient-start: #f2ede9;
+      --bg-gradient-mid:   #e9e4df;
+      --bg-gradient-end:   #d9d5d2;
 
-      --card-bg: rgba(255, 255, 255, 0.88);
-      --card-soft: rgba(255, 255, 255, 0.96);
+      --card-bg:         rgba(255, 255, 255, 0.94);
+      --card-soft:       rgba(255, 255, 255, 0.99);
 
-      --accent: #006f7a;
-      --accent-soft: #009fad;
+      --accent:          #7a6f67;
+      --accent-soft:     #a28d7a;
 
-      --text-main: #033b43;
-      --text-muted: #275b63;
+      --text-main:       #2f2a26;
+      --text-muted:      #6a5c52;
 
-      --link: #006f7a;
+      --chip-bg:         rgba(122, 111, 103, 0.06);
+      --chip-border:     rgba(122, 111, 103, 0.28);
 
-      --chip-bg: rgba(0, 159, 173, 0.06);
-      --chip-border: rgba(0, 159, 173, 0.28);
+      --shadow-soft:     0 18px 40px rgba(0, 0, 0, 0.12);
 
-      --shadow-soft: 0 18px 40px rgba(0, 0, 0, 0.12);
-
-      --radius-lg: 24px;
-      --radius-xl: 40px;
+      --radius-lg:       24px;
+      --radius-xl:       40px;
     }
 
     * {
@@ -61,7 +59,7 @@
       padding: 24px 16px 40px;
     }
 
-    /* TOP NAV */
+    /* NAV */
 
     .top-nav {
       display: flex;
@@ -74,24 +72,24 @@
     .top-nav a {
       text-decoration: none;
       color: var(--text-main);
-      padding: 6px 12px;
+      padding: 6px 14px;
       border-radius: 999px;
-      border: 1px solid transparent;
-      background: rgba(255, 255, 255, 0.25);
+      border: 1px solid rgba(255, 255, 255, 0.8);
+      background: rgba(255, 255, 255, 0.6);
       backdrop-filter: blur(10px);
     }
 
     .top-nav a:hover {
-      border-color: rgba(0, 111, 122, 0.35);
-      background: rgba(255, 255, 255, 0.6);
+      border-color: rgba(122, 111, 103, 0.35);
+      background: rgba(255, 255, 255, 0.9);
     }
 
     /* HERO */
 
     .hero {
       background: radial-gradient(circle at top,
-          rgba(255, 255, 255, 0.92),
-          rgba(255, 255, 255, 0.82));
+          rgba(255, 255, 255, 0.97),
+          rgba(255, 255, 255, 0.92));
       border-radius: var(--radius-xl);
       padding: 32px 20px 26px;
       box-shadow: var(--shadow-soft);
@@ -99,20 +97,20 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      border: 1px solid rgba(255, 255, 255, 0.9);
+      border: 1px solid rgba(255, 255, 255, 0.98);
     }
 
     .hero-photo-wrapper {
-      width: 160px;
-      height: 160px;
+      width: 170px;
+      height: 170px;
       border-radius: 50%;
       padding: 4px;
       background: conic-gradient(
         from 210deg,
-        #e8ffff,
-        #70c4c3,
-        #009fad,
-        #e8ffff
+        #f2ede9,
+        #d9d5d2,
+        #c7b7a3,
+        #f2ede9
       );
       display: flex;
       align-items: center;
@@ -126,10 +124,10 @@
       border-radius: 50%;
       background-size: cover;
       background-position: center;
-      background-color: #c0e7ea; /* запасний фон */
+      background-color: #d8c9bc; /* запасний фон, якщо фото не підвантажиться */
 
-      /* ⚠️ СЮДИ ВСТАВ СВІЙ URL ФОТО З GITHUB */
-      background-image: url("https://via.placeholder.com/400x400.png?text=Oksana");
+      /* TODO: підстав свій URL фото з GitHub (raw...) */
+      background-image: url("https://via.placeholder.com/500x500.png?text=Oksana");
     }
 
     .hero-name {
@@ -185,11 +183,11 @@
     .hero-links a {
       text-decoration: none;
       font-size: 0.9rem;
-      padding: 8px 16px;
+      padding: 8px 18px;
       border-radius: 999px;
-      border: 1px solid rgba(0, 111, 122, 0.45);
+      border: 1px solid rgba(122, 111, 103, 0.4);
       color: var(--accent);
-      background: rgba(255, 255, 255, 0.85);
+      background: rgba(255, 255, 255, 0.95);
     }
 
     .hero-links a.primary {
@@ -199,12 +197,12 @@
     }
 
     .hero-links a:hover {
-      background: rgba(255, 255, 255, 1);
+      background: #ffffff;
     }
 
     .hero-links a.primary:hover {
-      background: #007b87;
-      border-color: #007b87;
+      background: #8d7864;
+      border-color: #8d7864;
     }
 
     /* CONTENT SECTIONS */
@@ -220,7 +218,7 @@
       border-radius: var(--radius-lg);
       padding: 20px 18px 18px;
       box-shadow: var(--shadow-soft);
-      border: 1px solid rgba(255, 255, 255, 0.9);
+      border: 1px solid rgba(255, 255, 255, 0.98);
     }
 
     .card h2 {
@@ -271,9 +269,9 @@
       font-size: 0.8rem;
       padding: 4px 9px;
       border-radius: 999px;
-      background: rgba(0, 159, 173, 0.06);
+      background: rgba(122, 111, 103, 0.06);
       color: var(--accent);
-      border: 1px solid rgba(0, 159, 173, 0.25);
+      border: 1px solid rgba(122, 111, 103, 0.25);
     }
 
     .projects-list a {
@@ -296,7 +294,7 @@
     }
 
     .projects-list a:hover {
-      border-color: rgba(0, 159, 173, 0.35);
+      border-color: rgba(122, 111, 103, 0.35);
       box-shadow: 0 10px 24px rgba(0, 0, 0, 0.08);
     }
 
@@ -307,7 +305,7 @@
     }
 
     .contacts a {
-      color: var(--link);
+      color: var(--accent);
       text-decoration: none;
     }
 
@@ -318,7 +316,7 @@
     footer {
       margin-top: 26px;
       font-size: 0.8rem;
-      color: rgba(3, 59, 67, 0.8);
+      color: rgba(47, 42, 38, 0.8);
       text-align: center;
     }
 
@@ -327,7 +325,6 @@
         grid-template-columns: 1.1fr 1fr;
         grid-auto-rows: minmax(0, auto);
       }
-
       .card.span-2 {
         grid-column: span 2;
       }
@@ -356,7 +353,7 @@
       </div>
 
       <p class="hero-subtitle">
-        Допомагаю бізнесу переходити від ручної рутини до розумних автоматизованих рішень
+        Допомагаю бізнесу перейти від ручної рутини до розумних автоматизованих рішень
         на базі Google AI, Google Workspace, API та хмарної інфраструктури.
       </p>
 
@@ -387,8 +384,8 @@
         <h2>Експертиза</h2>
         <p>
           Працюю на перетині AI, фінансів, HR та хмарної автоматизації. Створюю системи,
-          які скорочують ручну роботу, зменшують кількість помилок і дають прозору
-          картину даних у бізнесі.
+          які зменшують ручну роботу, знижують кількість помилок і дають прозору картину
+          даних для рішень.
         </p>
         <ul>
           <li>AI-рішення на базі Gemini / Vertex AI / Document AI</li>
@@ -398,7 +395,7 @@
         </ul>
         <div class="pill-row">
           <span class="pill">AI Automation</span>
-          <span class="pill">Google Workspace Developer</span>
+          <span class="pill">Google Workspace</span>
           <span class="pill">Business Analysis</span>
         </div>
       </section>
@@ -420,26 +417,26 @@
       <section class="card span-2" id="projects">
         <h2>AI та автоматизаційні проєкти</h2>
         <p>
-          Ключові приклади рішень, які я проєктую та впроваджую. Для кожного можна
-          зробити окремий репозиторій або сторінку з технічними деталями.
+          Короткий перелік напрямів, над якими працюю. Для кожного з них можна
+          зробити окрему технічну сторінку чи репозиторій.
         </p>
 
         <div class="projects-list">
-          <a href="projects/inventory-bot.md">
+          <a href="#">
             Telegram Inventory Bot — Cloud Run + Sheets
-            <span>AI-складський облік з інтеграцією Google Sheets та Telegram.</span>
+            <span>AI-орієнтований складський облік з інтеграцією Google Sheets та Telegram.</span>
           </a>
-          <a href="projects/ocr-validation.md">
+          <a href="#">
             OCR Data Validation System — Document AI
-            <span>Розпізнавання документів та автоматична валідація даних.</span>
+            <span>Розпізнавання документів та автоматична валідація даних за бізнес-правилами.</span>
           </a>
-          <a href="projects/ai-agents.md">
+          <a href="#">
             HR & Finance AI Agents — Gemini API
-            <span>Генерація документів, перевірка записів, робочі AI-сценарії.</span>
+            <span>Генерація документів, перевірка записів, аналітика та робочі AI-сценарії.</span>
           </a>
-          <a href="projects/automation-workflows.md">
+          <a href="#">
             Automation Workflows — Make / n8n
-            <span>No-code інтеграції між CRM, Telegram, Sheets та іншими сервісами.</span>
+            <span>No-code інтеграції між CRM, Telegram, Google Sheets та іншими сервісами.</span>
           </a>
         </div>
       </section>
@@ -448,9 +445,10 @@
         <h2>Сертифікації</h2>
         <p><strong>Google AI Skill Badges:</strong></p>
         <ul>
-          <li>Automate Data Capture with Document AI</li>
-          <li>Build AI Applications with Gemini & Imagen</li>
-          <li>Vertex AI Gemini API / Multimodal & RAG</li>
+          <li>Automate Data Capture at Scale with Document AI</li>
+          <li>Build Real-World AI Applications with Gemini & Imagen</li>
+          <li>Explore Generative AI with Vertex AI Gemini API</li>
+          <li>Inspect Rich Documents with Gemini Multimodality & RAG</li>
           <li>Prompt Design in Vertex AI</li>
         </ul>
         <p><strong>Business Process Modeling (Luxoft):</strong></p>
@@ -473,7 +471,7 @@
             профіль
           </a>
         </p>
-        <p>Місто: Київ, Україна</p>
+        <p>Київ, Україна</p>
       </section>
     </div>
 
