Refactor hero section styles and update image URL

--- a/index.html
+++ b/index.html
@@ -117,24 +117,24 @@
       justify-content: center;
       margin-bottom: 18px;
     }
+.hero-photo {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  background-color: #d8c9bc;
 
-    .hero-photo {
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      background-size: cover;
-      background-position: center;
-      background-color: #d8c9bc; /* запасний фон, якщо фото не підвантажиться */
+  background-image: url("https://raw.githubusercontent.com/belinskayaoksana/portfolio/main/oksana.jpg");
+}
 
-      /* TODO: підстав свій URL фото з GitHub (raw...) */
-      background-image: url("https://via.placeholder.com/500x500.png?text=Oksana");
-    }
+.hero-name {
+  font-size: 1.6rem;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  margin-bottom: 6px;
+}
 
-    .hero-name {
-      font-size: 1.6rem;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      margin-bottom: 6px;
     }
 
     .hero-role {
