--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
   <meta charset="UTF-8" />
-  <title>Оксана Тимченко — AI & Automation Business Partner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Oksana Tymchenko — AI Automation Portfolio</title>
+
+  <!-- GOOGLE ANALYTICS -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H8C3P9HN4S"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-H8C3P9HN4S');
+  </script>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Nunito:wght@400;500;600&display=swap" rel="stylesheet" />
+  
+  <!-- CSS буде тут -->
+</head>
+
+<body>
+  <!-- Весь вміст сторінки тут -->
+
 
   <style>
     :root {
